--- a/mypy.ini
+++ b/mypy.ini
@@ -1,3 +1,4 @@
 [mypy]
-mypy_path = ./third-party-stubs
-namespace_packages = True
+ignore_missing_imports = True
+follow_imports = skip
+exclude = .eggs|.git|.mypy_cache|.venv|venv|env|venv.*|_build|build|build|dist
