Tweak driver versions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,4 @@ skip = '.eggs/,.mypy_cache/,.venv/,venv/,env/'
 
 [tool.pytest.ini_options]
 log_cli = true
-log_cli_level = "INFO"
+log_cli_level = "WARNING"
