--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,7 +24,7 @@ jobs:
         run: pip install --upgrade setuptools wheel
 
       - name: Install requirements
-        run: pip install -r requirements-dev.txt
+        run: pip install -r dev_requirements.txt
 
       - name: Run lint
         run: make lint
