--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,15 +13,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - python-version: '3.8'
-            clickhouse-version: "21"
-          - python-version: '3.9.6'
-            clickhouse-version: "21"
-          - python-version: '3.8'
-            clickhouse-version: "21.3"
-          - python-version: '3.9.6'
-            clickhouse-version: "21.3"
+        # Excluding Python 3.7 and 3.10 since Superset 1.5 doesn't install on 3.7 or 3.10.  Hopefully we can
+        # add 3.10 soon
+        python-version:
+          - '3.8'
+          - '3.9'
+        clickhouse-version:
+          - '21.8'
+          - '22.3'
+          - latest
 
     services:
       clickhouse:
