--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,11 @@ jobs:
       clickhouse:
         image: clickhouse/clickhouse-server:${{ matrix.clickhouse-version}}
         ports:
-          - 9000:9000
           - 8123:8123
+      clickhouse-native:
+        image: clickhouse/clickhouse-server:${{ matrix.clickhouse-version}}
+        ports:
+          - 9000:9000
 
     steps:
       - name: Checkout
@@ -41,6 +44,13 @@ jobs:
         run: |
           pip install -r dev_requirements.txt
 
-      - name: Run tests
+      - name: Run HTTP tests
         run: |
           PYTHONPATH="${PYTHONPATH}:dbt" pytest tests/integration
+
+      - name: Run Native tests
+        env:
+          PORT_ENV_VAR_NAME: 9000
+        run: |
+          PYTHONPATH="${PYTHONPATH}:dbt" pytest tests/integration
+          
