--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,8 @@ jobs:
           - 8123:8123
       clickhouse-native:
         image: clickhouse/clickhouse-server:${{ matrix.clickhouse-version}}
-        #ports:
-        #  - 9000:9000
+        ports:
+          - 9000:9000
 
     steps:
       - name: Checkout
