--- a/pytest.ini
+++ b/pytest.ini
@@ -4,5 +4,6 @@ filterwarnings =
     ignore:.*: ResourceWarning
 env_files =
     test.env
+pythonpath = .
 testpaths =
     tests/integration  # name per convention
