--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
           - 8123:8123
           - 9000:9000
         volumes:
-          - ${{ github.workspace }}/tests/integration/access_management.xml:/etc/clickhouse-server/users.d/users.xml
+          - ${{ runner.workspace }}/tests/integration/access_management.xml:/etc/clickhouse-server/users.d/users.xml
 
     steps:
       - name: Checkout
