--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,9 +43,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Copy access file
-        run:
-          mkdir ${{ github.workspace }}/docker_users
-          cp tests/integration/access_management.yaml ${{ github.workspace }}/docker_users
+        run: |
+          mkdir -p ${{ github.workspace }}/docker_users
+          cp -u tests/integration/access_management.yaml ${{ github.workspace }}/docker_users
 
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
