Working on github workflows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,12 +34,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Create docker network
-        run: docker network create data
+        run: docker network create ch_network
 
       - name: Run ClickHouse Container
         run: docker run 
             -v ${{ github.workspace }}/tests/integration/access_management.xml:/etc/clickhouse-server/users.d/am.xml 
-            --network ${{ job.container.network }}
+            --network ch_network
             --name clickhouse
             -p 8123:8123
             -p 9000:9000
