--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,17 +33,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Create docker network
-        run: docker network create ch_network
-
       - name: Run ClickHouse Container
-        run: docker run 
+        uses: addnab/docker-run-action@v3
+        with:
+          image: clickhouse/clickhouse-server:latest
+          options: >-
             -v ${{ github.workspace }}/tests/integration/access_management.xml:/etc/clickhouse-server/users.d/am.xml 
-            --network ch_network
-            --name clickhouse
             -p 8123:8123
             -p 9000:9000
-            clickhouse/clickhouse-server:latest
 
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
@@ -55,8 +52,6 @@ jobs:
           pip install -r dev_requirements.txt
 
       - name: Run HTTP tests
-        env:
-          DBT_CH_TEST_HOST: clickhouse
         run: |
           PYTHONPATH="${PYTHONPATH}:dbt" pytest tests
 
