--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run ClickHouse Container
-        run: docker run -v ${{ github.workspace }}/tests/integration/access_management.xml:/etc/clickhouse-server/users.d/am.xml --network ${{ job.container.network }} -p 8123:8123 -p 9000:9000 clickhouse/clickhouse-server:latest
+        uses: addnab/docker-run-action@v3
+        with:
+          image: clickhouse/clickhouse-server:latest
+          options: -p 8123:8123 -p 9000:9000 -v ${{ github.workspace }}/tests/integration/access_management.xml:/etc/clickhouse-server/users.d/am.xml
+          run: /entrypoint.sh
 
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
@@ -46,8 +50,6 @@ jobs:
           pip install -r dev_requirements.txt
 
       - name: Run HTTP tests
-        env:
-          DBT_CH_TEST_HOST: clickhouse
         run: |
           PYTHONPATH="${PYTHONPATH}:dbt" pytest tests
 
