--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
           - 8123:8123
           - 9000:9000
         volumes:
-          - ${{ github.workspace }}/docker_users:/etc/clickhouse-server/users.d
+          - ${{ runner.temp }}/docker_users:/etc/clickhouse-server/users.d
 
     steps:
       - name: Checkout
@@ -45,7 +45,7 @@ jobs:
       - name: Copy access file
         run: |
           mkdir -p ${{ github.workspace }}/docker_users
-          cp -u tests/integration/access_management.xml ${{ github.workspace }}/docker_users
+          cp -u tests/integration/access_management.xml ${{ runner.temp }}/docker_users
 
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
