--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
   build:
     name: Python ${{ matrix.python-version }} | Clickhouse ${{ matrix.clickhouse-version}} | Ubuntu
     runs-on: ubuntu-latest
-    container: python:3.9
+    container: ubuntu:latest
     strategy:
       fail-fast: false
       matrix:
@@ -43,6 +43,8 @@ jobs:
       #    mkdir -p /home/runner/work/_temp/users.d
       #    cp -u tests/integration/access_management.xml /home/runner/work/_temp/users.d
 
+      - name: install Python
+        run: apt install python3.9
 
       - name: Run ClickHouse Container
         run: docker run
