Working on github workflows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,10 @@ jobs:
       #- name: Install pip
       #  run: python3 -m ensurepip --upgrade
 
+      - name: Install Docker
+        run: apt get docker
+
+
       - name: Run ClickHouse Container
         run: docker run
             --name clickhouse
