--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,17 +46,17 @@ jobs:
       #- name: Install pip
       #  run: python3 -m ensurepip --upgrade
 
-      - name: Install Docker
-        run: apt install docker
+      #- name: Install Docker
+      #  run: apt install docker
 
-      - name: Run ClickHouse Container
-        run: docker run
-            --name clickhouse
-            --network {{ job.container.network }}
-            -p 8123:8123
-            -p 9000:9000 
-            --ulimit nofile=262144:262144
-            clickhouse/clickhouse-server:latest
+      #- name: Run ClickHouse Container
+      #  run: docker run
+      #      --name clickhouse
+      #      --network {{ job.container.network }}
+      #      -p 8123:8123
+      #      -p 9000:9000
+      #      --ulimit nofile=262144:262144
+      #      clickhouse/clickhouse-server:latest
 
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
@@ -68,6 +68,8 @@ jobs:
           pip3 install -r dev_requirements.txt
 
       - name: Run HTTP tests
+        env:
+          DBT_CH_TEST_USER_DOCKER: True
         run: |
           PYTHONPATH="${PYTHONPATH}:dbt" pytest tests/integration
 
