--- a/tests/integration/docker-compose.yml
+++ b/tests/integration/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 
 services:
   ch_server:
-    image: clickhouse/clickhouse-server:22.6.1
+    image: clickhouse/clickhouse-server:latest
     ports:
       - "10723:8123"
       - "10743:8443"
