--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,7 +67,7 @@ jobs:
           pip3 install -r dev_requirements.txt
 
       - name: Start docker compose
-        run: docker compose -w tests -f github-docker-compose.yml up
+        run: docker compose --workdir tests -f github-docker-compose.yml up
 
       - name: Run HTTP tests
         #env:
