--- a/tests/github-docker-compose.yml
+++ b/tests/github-docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 
 services:
   ch_server:
-    image: clickhouse/clickhouse-server:latest
+    image: clickhouse/clickhouse-server:22.6
     ports:
       - "8123:8123"
       - "9000:9000"
