--- a/.github/workflows/test_matrix.yml
+++ b/.github/workflows/test_matrix.yml
@@ -8,6 +8,7 @@ on:  # yamllint disable-line rule:truthy
     branches-ignore:
       - '*_test'
       - '*_dev'
+      - '*cloud*'
     paths-ignore:
       - 'README.md'
       - 'CHANGELOG.md'
