--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,6 +7,7 @@ on:  # yamllint disable-line rule:truthy
     branches-ignore:
       - '*_test'
       - '*_dev'
+      - '*_cloud'
 
 jobs:
   lint:
