Lightweight deletes initial implementation

--- a/.github/workflows/test_matrix.yml
+++ b/.github/workflows/test_matrix.yml
@@ -29,11 +29,19 @@ jobs:
           - '22.3'
           - '22.8'
           - '22.9'
+          - '22.10'
           - latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Set test_settings file
+        run: TEST_SETTINGS_FILE=latest
+
+      - name: Set legacy test settings file
+        if: ${{ matrix.clickhouse-version == '22.3' }}
+        run: TEST_SETTINGS_FILE=22_3
 
       - name: Run ClickHouse Container
         run: docker run
@@ -42,7 +50,7 @@ jobs:
              -p 9000:9000
              --name clickhouse
              -v /var/lib/clickhouse
-             -v ${{ github.workspace }}/tests/integration/access_management.xml:/etc/clickhouse-server/users.d/am.xml
+             -v ${{ github.workspace }}/tests/integration/test_settings_${TEST_SETTINGS_FILE}.xml:/etc/clickhouse-server/users.d/test_settings.xml
              --ulimit nofile=262144:262144
              clickhouse/clickhouse-server:${{ matrix.clickhouse-version }}
 
